fix collapse in Fiche logement OK

--- a/src/components/Collapse/Collapse.module.scss
+++ b/src/components/Collapse/Collapse.module.scss
@@ -3,9 +3,9 @@
   
   border-radius: 10px;
 
-  @media (min-width: 1024px) {
-    width: 582px;
-  }
+  // @media (min-width: 1024px) {
+  //   width: 582px;
+  // }
 }
 
 .header {
