--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -180,14 +180,3 @@ body {
   color: $primary-color;
 }
 
-.collapse-container {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
-  margin-top: 20px;
-
-  @media (max-width: 768px) {
-    flex-direction: column;
-    gap: 10px;
-  }
-}
